2010-01-06  Graham Cobb  <g+770@cobb.uk.net>

	* ui.c (gpe_pim_categories_dialog): HACK to workround Maemo5 bug with toggle rendering.

2009-10-04  Graham Cobb  <g+770@cobb.uk.net>

	* configure.ac: Check for Maemo version

	* ui.c (gpe_pim_categories_dialog): Remove Cancel button on Fremantle

2008-09-05  Graham Cobb  <g+770@cobb.uk.net>

	* debian/control: change binary package name to libgpepimc1

	* Makefile.am (libgpepimc_la_LDFLAGS): set -version-info to
	1:0:0 as these changes are incompatible with previous library
	version

	* internal.h: Move gpe_pim_category_delete to pim-categories.h
	Move struct gpe_pim_category from pim-categories.h

	* gpe/pim-categories.h: Move gpe_pim_category_delete from internal.h
	Move struct gpe_pim_category to internal.h

	* db.c (gpe_pim_categories_refresh): Add gpe_pim_categories_refresh.
	Also, make categories data structure opaque: gpe_pim_category_rename, 
	gpe_pim_category_set_colour and gpe_pim_category_delete update 
	in-memory categories; gpe_pim_categories_list returns list of category ids;
	gpe_pim_category_delete takes id, not category address.
	(check_table_update): remove unused variable declarations.
	

2008-06-14  Graham Cobb  <g+770@cobb.uk.net>

	* db.c (gpe_pim_categories_init): Add patch from Lars Persson Fink,
	bug 182, to sort categories by name

2008-01-10  Graham Cobb  <g+770@cobb.uk.net>

	* ui.c: Fix usage of new color argument in 
	hildon_color_button_get_color.  Does fix #128

2007-12-30  Graham Cobb  <g+770@cobb.uk.net>

	* ui.c: Fix typo in previous change

2007-12-28  Florian Boor  <florian@kernelconcepts.de>

	* ui.c: Do not set "allow-checkbox-mode" property if using modern
	  Hildon  libraries. Should fix #128

2007-11-05  Graham Cobb  <g+770@cobb.uk.net>

	* configure.ac, ui.c: set HILDON_VER to 2

2007-10-28  Graham Cobb  <g+770@cobb.uk.net>

	* Makefile.am, configure.ac: build and compile
	changes for new hildon libraries in chinook

2007-09-06  Graham Cobb  <g+770@cobb.uk.net>
